performEncryption and performDecryption have been altered to be more flexible. Additionally, Class javadoc has been altered to use my name as the author now.